Timemania/src/TimemaniaParser.py
# Generated from TimemaniaParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TimemaniaParser ( Parser ):

    grammarFileName = "TimemaniaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'start'", "'end'", "'se'", "'entao'", 
                     "'senao'", "'enquanto'", "'faca'", "'escreva'", "'leia'", 
                     "'flamengo'", "'corinthians'", "'palmeiras'", "'santos'", 
                     "'vasco'", "'funcao'", "'procedimento'", "'retorna'", 
                     "'para'", "'ate'", "'de'", "'repita'", "'tipo'", "'var'", 
                     "'const'", "'registro'", "'vetor'", "'inteiro'", "'texto'", 
                     "'booleano'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "';'", "':='", "'.'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "START", "END", "SE", "ENTAO", "SENAO", 
                      "ENQUANTO", "FACA", "ESCREVA", "LEIA", "FLAMENGO", 
                      "CORINTHIANS", "PALMEIRAS", "SANTOS", "VASCO", "FUNCAO", 
                      "PROCEDIMENTO", "RETORNA", "PARA", "ATE", "DE", "REPITA", 
                      "TIPO", "VAR", "CONST", "REGISTRO", "VETOR", "INTEIRO", 
                      "TEXTO", "BOOLEANO", "PARENTESE", "CHAVE", "COLCHETE", 
                      "DELIMITER", "ASSIGN", "PONTO", "VIRGULA", "DOISPONTOS", 
                      "OPERATOR", "COMPARADOR", "NUMBER", "STRING", "ID", 
                      "WS", "COMMENT", "MULTILINE_COMMENT" ]

    RULE_programa = 0
    RULE_declaracao = 1
    RULE_constante = 2
    RULE_tipagem = 3
    RULE_tipoDefinicao = 4
    RULE_tipoSimples = 5
    RULE_tipoEstruturado = 6
    RULE_registroTipo = 7
    RULE_vetorTipo = 8
    RULE_variavel = 9
    RULE_funcaoProcedimento = 10
    RULE_funcao = 11
    RULE_procedimento = 12
    RULE_parametro = 13
    RULE_retorno = 14
    RULE_comando = 15
    RULE_atribuicao = 16
    RULE_futebol = 17
    RULE_io = 18
    RULE_controle = 19
    RULE_bloco = 20
    RULE_chamadaFuncao = 21
    RULE_expressao = 22
    RULE_termo = 23
    RULE_condicao = 24

    ruleNames =  [ "programa", "declaracao", "constante", "tipagem", "tipoDefinicao", 
                   "tipoSimples", "tipoEstruturado", "registroTipo", "vetorTipo", 
                   "variavel", "funcaoProcedimento", "funcao", "procedimento", 
                   "parametro", "retorno", "comando", "atribuicao", "futebol", 
                   "io", "controle", "bloco", "chamadaFuncao", "expressao", 
                   "termo", "condicao" ]

    EOF = Token.EOF
    START=1
    END=2
    SE=3
    ENTAO=4
    SENAO=5
    ENQUANTO=6
    FACA=7
    ESCREVA=8
    LEIA=9
    FLAMENGO=10
    CORINTHIANS=11
    PALMEIRAS=12
    SANTOS=13
    VASCO=14
    FUNCAO=15
    PROCEDIMENTO=16
    RETORNA=17
    PARA=18
    ATE=19
    DE=20
    REPITA=21
    TIPO=22
    VAR=23
    CONST=24
    REGISTRO=25
    VETOR=26
    INTEIRO=27
    TEXTO=28
    BOOLEANO=29
    PARENTESE=30
    CHAVE=31
    COLCHETE=32
    DELIMITER=33
    ASSIGN=34
    PONTO=35
    VIRGULA=36
    DOISPONTOS=37
    OPERATOR=38
    COMPARADOR=39
    NUMBER=40
    STRING=41
    ID=42
    WS=43
    COMMENT=44
    MULTILINE_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(TimemaniaParser.START, 0)

        def END(self):
            return self.getToken(TimemaniaParser.END, 0)

        def declaracao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimemaniaParser.DeclaracaoContext)
            else:
                return self.getTypedRuleContext(TimemaniaParser.DeclaracaoContext,i)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimemaniaParser.ComandoContext)
            else:
                return self.getTypedRuleContext(TimemaniaParser.ComandoContext,i)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = TimemaniaParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(TimemaniaParser.START)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 29458432) != 0):
                self.state = 51
                self.declaracao()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 57
                self.comando()
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4398048902984) != 0)):
                    break

            self.state = 62
            self.match(TimemaniaParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constante(self):
            return self.getTypedRuleContext(TimemaniaParser.ConstanteContext,0)


        def tipagem(self):
            return self.getTypedRuleContext(TimemaniaParser.TipagemContext,0)


        def variavel(self):
            return self.getTypedRuleContext(TimemaniaParser.VariavelContext,0)


        def funcaoProcedimento(self):
            return self.getTypedRuleContext(TimemaniaParser.FuncaoProcedimentoContext,0)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = TimemaniaParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.constante()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.tipagem()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.variavel()
                pass
            elif token in [15, 16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.funcaoProcedimento()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(TimemaniaParser.CONST, 0)

        def ID(self):
            return self.getToken(TimemaniaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(TimemaniaParser.ASSIGN, 0)

        def expressao(self):
            return self.getTypedRuleContext(TimemaniaParser.ExpressaoContext,0)


        def DELIMITER(self):
            return self.getToken(TimemaniaParser.DELIMITER, 0)

        def getRuleIndex(self):
            return TimemaniaParser.RULE_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstante" ):
                listener.enterConstante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstante" ):
                listener.exitConstante(self)




    def constante(self):

        localctx = TimemaniaParser.ConstanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constante)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(TimemaniaParser.CONST)
            self.state = 71
            self.match(TimemaniaParser.ID)
            self.state = 72
            self.match(TimemaniaParser.ASSIGN)
            self.state = 73
            self.expressao()
            self.state = 74
            self.match(TimemaniaParser.DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipagemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(TimemaniaParser.TIPO, 0)

        def ID(self):
            return self.getToken(TimemaniaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(TimemaniaParser.ASSIGN, 0)

        def tipoDefinicao(self):
            return self.getTypedRuleContext(TimemaniaParser.TipoDefinicaoContext,0)


        def DELIMITER(self):
            return self.getToken(TimemaniaParser.DELIMITER, 0)

        def getRuleIndex(self):
            return TimemaniaParser.RULE_tipagem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipagem" ):
                listener.enterTipagem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipagem" ):
                listener.exitTipagem(self)




    def tipagem(self):

        localctx = TimemaniaParser.TipagemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipagem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(TimemaniaParser.TIPO)
            self.state = 77
            self.match(TimemaniaParser.ID)
            self.state = 78
            self.match(TimemaniaParser.ASSIGN)
            self.state = 79
            self.tipoDefinicao()
            self.state = 80
            self.match(TimemaniaParser.DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoDefinicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoSimples(self):
            return self.getTypedRuleContext(TimemaniaParser.TipoSimplesContext,0)


        def tipoEstruturado(self):
            return self.getTypedRuleContext(TimemaniaParser.TipoEstruturadoContext,0)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_tipoDefinicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoDefinicao" ):
                listener.enterTipoDefinicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoDefinicao" ):
                listener.exitTipoDefinicao(self)




    def tipoDefinicao(self):

        localctx = TimemaniaParser.TipoDefinicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipoDefinicao)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [27, 28, 29, 42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.tipoSimples()
                pass
            elif token in [25, 26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.tipoEstruturado()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoSimplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TimemaniaParser.ID, 0)

        def INTEIRO(self):
            return self.getToken(TimemaniaParser.INTEIRO, 0)

        def TEXTO(self):
            return self.getToken(TimemaniaParser.TEXTO, 0)

        def BOOLEANO(self):
            return self.getToken(TimemaniaParser.BOOLEANO, 0)

        def getRuleIndex(self):
            return TimemaniaParser.RULE_tipoSimples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoSimples" ):
                listener.enterTipoSimples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoSimples" ):
                listener.exitTipoSimples(self)




    def tipoSimples(self):

        localctx = TimemaniaParser.TipoSimplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tipoSimples)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 4398986035200) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoEstruturadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registroTipo(self):
            return self.getTypedRuleContext(TimemaniaParser.RegistroTipoContext,0)


        def vetorTipo(self):
            return self.getTypedRuleContext(TimemaniaParser.VetorTipoContext,0)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_tipoEstruturado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoEstruturado" ):
                listener.enterTipoEstruturado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoEstruturado" ):
                listener.exitTipoEstruturado(self)




    def tipoEstruturado(self):

        localctx = TimemaniaParser.TipoEstruturadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tipoEstruturado)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.registroTipo()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.vetorTipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegistroTipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGISTRO(self):
            return self.getToken(TimemaniaParser.REGISTRO, 0)

        def CHAVE(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.CHAVE)
            else:
                return self.getToken(TimemaniaParser.CHAVE, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.ID)
            else:
                return self.getToken(TimemaniaParser.ID, i)

        def DOISPONTOS(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.DOISPONTOS)
            else:
                return self.getToken(TimemaniaParser.DOISPONTOS, i)

        def tipoDefinicao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimemaniaParser.TipoDefinicaoContext)
            else:
                return self.getTypedRuleContext(TimemaniaParser.TipoDefinicaoContext,i)


        def DELIMITER(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.DELIMITER)
            else:
                return self.getToken(TimemaniaParser.DELIMITER, i)

        def getRuleIndex(self):
            return TimemaniaParser.RULE_registroTipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegistroTipo" ):
                listener.enterRegistroTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegistroTipo" ):
                listener.exitRegistroTipo(self)




    def registroTipo(self):

        localctx = TimemaniaParser.RegistroTipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_registroTipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(TimemaniaParser.REGISTRO)
            self.state = 93
            self.match(TimemaniaParser.CHAVE)
            self.state = 99 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.match(TimemaniaParser.ID)
                self.state = 95
                self.match(TimemaniaParser.DOISPONTOS)
                self.state = 96
                self.tipoDefinicao()
                self.state = 97
                self.match(TimemaniaParser.DELIMITER)
                self.state = 101 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==42):
                    break

            self.state = 103
            self.match(TimemaniaParser.CHAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VetorTipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VETOR(self):
            return self.getToken(TimemaniaParser.VETOR, 0)

        def COLCHETE(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.COLCHETE)
            else:
                return self.getToken(TimemaniaParser.COLCHETE, i)

        def expressao(self):
            return self.getTypedRuleContext(TimemaniaParser.ExpressaoContext,0)


        def DE(self):
            return self.getToken(TimemaniaParser.DE, 0)

        def tipoSimples(self):
            return self.getTypedRuleContext(TimemaniaParser.TipoSimplesContext,0)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_vetorTipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVetorTipo" ):
                listener.enterVetorTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVetorTipo" ):
                listener.exitVetorTipo(self)




    def vetorTipo(self):

        localctx = TimemaniaParser.VetorTipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vetorTipo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(TimemaniaParser.VETOR)
            self.state = 106
            self.match(TimemaniaParser.COLCHETE)
            self.state = 107
            self.expressao()
            self.state = 108
            self.match(TimemaniaParser.COLCHETE)
            self.state = 109
            self.match(TimemaniaParser.DE)
            self.state = 110
            self.tipoSimples()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(TimemaniaParser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.ID)
            else:
                return self.getToken(TimemaniaParser.ID, i)

        def DOISPONTOS(self):
            return self.getToken(TimemaniaParser.DOISPONTOS, 0)

        def tipoSimples(self):
            return self.getTypedRuleContext(TimemaniaParser.TipoSimplesContext,0)


        def DELIMITER(self):
            return self.getToken(TimemaniaParser.DELIMITER, 0)

        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.VIRGULA)
            else:
                return self.getToken(TimemaniaParser.VIRGULA, i)

        def getRuleIndex(self):
            return TimemaniaParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = TimemaniaParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(TimemaniaParser.VAR)
            self.state = 113
            self.match(TimemaniaParser.ID)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==36:
                self.state = 114
                self.match(TimemaniaParser.VIRGULA)
                self.state = 115
                self.match(TimemaniaParser.ID)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(TimemaniaParser.DOISPONTOS)
            self.state = 122
            self.tipoSimples()
            self.state = 123
            self.match(TimemaniaParser.DELIMITER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoProcedimentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcao(self):
            return self.getTypedRuleContext(TimemaniaParser.FuncaoContext,0)


        def procedimento(self):
            return self.getTypedRuleContext(TimemaniaParser.ProcedimentoContext,0)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_funcaoProcedimento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncaoProcedimento" ):
                listener.enterFuncaoProcedimento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncaoProcedimento" ):
                listener.exitFuncaoProcedimento(self)




    def funcaoProcedimento(self):

        localctx = TimemaniaParser.FuncaoProcedimentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcaoProcedimento)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.funcao()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.procedimento()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCAO(self):
            return self.getToken(TimemaniaParser.FUNCAO, 0)

        def ID(self):
            return self.getToken(TimemaniaParser.ID, 0)

        def PARENTESE(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.PARENTESE)
            else:
                return self.getToken(TimemaniaParser.PARENTESE, i)

        def DOISPONTOS(self):
            return self.getToken(TimemaniaParser.DOISPONTOS, 0)

        def tipoSimples(self):
            return self.getTypedRuleContext(TimemaniaParser.TipoSimplesContext,0)


        def CHAVE(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.CHAVE)
            else:
                return self.getToken(TimemaniaParser.CHAVE, i)

        def retorno(self):
            return self.getTypedRuleContext(TimemaniaParser.RetornoContext,0)


        def parametro(self):
            return self.getTypedRuleContext(TimemaniaParser.ParametroContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimemaniaParser.ComandoContext)
            else:
                return self.getTypedRuleContext(TimemaniaParser.ComandoContext,i)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao" ):
                listener.enterFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao" ):
                listener.exitFuncao(self)




    def funcao(self):

        localctx = TimemaniaParser.FuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(TimemaniaParser.FUNCAO)
            self.state = 130
            self.match(TimemaniaParser.ID)
            self.state = 131
            self.match(TimemaniaParser.PARENTESE)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 132
                self.parametro()


            self.state = 135
            self.match(TimemaniaParser.PARENTESE)
            self.state = 136
            self.match(TimemaniaParser.DOISPONTOS)
            self.state = 137
            self.tipoSimples()
            self.state = 138
            self.match(TimemaniaParser.CHAVE)
            self.state = 140 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 139
                self.comando()
                self.state = 142 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4398048902984) != 0)):
                    break

            self.state = 144
            self.retorno()
            self.state = 145
            self.match(TimemaniaParser.CHAVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDIMENTO(self):
            return self.getToken(TimemaniaParser.PROCEDIMENTO, 0)

        def ID(self):
            return self.getToken(TimemaniaParser.ID, 0)

        def PARENTESE(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.PARENTESE)
            else:
                return self.getToken(TimemaniaParser.PARENTESE, i)

        def CHAVE(self, i:int=None):
            if i is None:
                return self.getTokens(TimemaniaParser.CHAVE)
            else:
                return self.getToken(TimemaniaParser.CHAVE, i)

        def parametro(self):
            return self.getTypedRuleContext(TimemaniaParser.ParametroContext,0)


        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimemaniaParser.ComandoContext)
            else:
                return self.getTypedRuleContext(TimemaniaParser.ComandoContext,i)


        def getRuleIndex(self):
            return TimemaniaParser.RULE_procedimento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedimento" ):
                listener.enterProcedimento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedimento" ):
                listener.exitProcedimento(self)




    def procedimento(self):

        localctx = TimemaniaParser.ProcedimentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_procedimento)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(TimemaniaParser.PROCEDIMENTO)
            self.state = 148
            self.match(TimemaniaParser.ID)
            self.state = 149
            self.match(TimemaniaParser.PARENTESE)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 150
                self.parametro()


            self.state = 153
            self.match(TimemaniaParser.PARENTESE)
            self.state = 154
            self.match(TimemaniaParser.CHAVE)
            self.state = 156 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 155
                self.comando()
                self.state = 158 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4398048902984) != 0)):
                    break
